# pytorch-dense-unet-3d

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dense_unet_3d/: cli.py  config.yaml  main.py
dense_unet_3d/dataset/: LITSDataset.py  prepare_dataset.py
dense_unet_3d/dataset/transforms/: ClampValues.py  RandomHorizontalFlip.py  ReshapeTensor.py  Resize.py  ScaleAndPadOrCrop.py
dense_unet_3d/evaluation/: dice_score.py  evaluate.py
dense_unet_3d/model/: DenseUNet3d.py
dense_unet_3d/model/building_blocks/: DenseBlock.py  TransitionBlock.py  UpsamplingBlock.py  dense_layer.py  ds_conv.py
dense_unet_3d/training/: cascaded_driver.py  loss.py  train.py
docs/research/: 2026-06-21-denseunet569-architecture-decisions.md
scripts/: install_venv.ps1
tests/: conftest.py  test_ci_workflow.py  test_cli.py  test_fixtures_sanity.py  test_packaging.py
tests/dataset/: test_lits_dataset.py  test_prepare_dataloader.py  test_split.py  test_transforms.py
tests/evaluation/: test_dice_score.py  test_evaluate.py
tests/model/: test_dense_unet_3d.py
tests/model/building_blocks/: test_dense_block.py  test_dense_layer.py  test_ds_conv.py  test_transition_block.py  test_upsampling_block.py
tests/training/: test_cascaded_driver.py  test_loss.py  test_train.py
